# recetas-iv

./: Dockerfile  README.md  iv.yaml  prueba.md  pyproject.toml  requirements.txt  tasks.py
.circleci/: config.yml
.github/workflows/: build.yml  sync.yml  versiones.yml
docs/: HU.md  InformacionReceta.md  IntegracionContinua.md  decisiones_codigo.md  justificacion_pytest.md  obj3.md
src/: Ingrediente.py  Receta.py  ingrediente.py  receta.py
test/: test_receta.py
